# go-textnow

./: .env.example  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum
api/proto/: phonebook.proto  sms.proto
cmd/gateway/: BUILD.bazel  main.go
cmd/phonebook/: BUILD.bazel  main.go
cmd/sms/: BUILD.bazel  main.go
deployment/k8s/: secret.example.yaml
deployment/k8s/gateway/: BUILD.bazel  deployment.yaml  ingress.yaml  service.yaml
deployment/k8s/phonebook/: deployment.yaml  service.yaml
deployment/k8s/sms/: deployment.yaml  service.yaml
internal/phonebook/: BUILD.bazel  phonebook.go  phonebook.pb.go  phonebook.pb.gw.go  phonebook.validator.pb.go
internal/pkg/config/: BUILD.bazel  config.go
internal/pkg/logger/: BUILD.bazel  logger.go
internal/pkg/mongodb/: BUILD.bazel  mongodb.go
internal/pkg/mysql/: BUILD.bazel  mysql.go
internal/pkg/redis/: BUILD.bazel  redis.go
internal/pkg/tracing/: BUILD.bazel  tracing.go
internal/pkg/validator/: BUILD.bazel  validator.go
internal/sms/: BUILD.bazel  sms.go  sms.pb.go  sms.pb.gw.go  sms.validator.pb.go
scripts/: mysql.sql  proto-gen.sh
tests/: BUILD.bazel  main_test.go  phonebook_test.go  sms_test.go
tests/stubs/: BUILD.bazel  stubs.go
