load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "sms.go",
        "sms.pb.go",
        "sms.pb.gw.go",
        "sms.validator.pb.go",
    ],
    importpath = "github.com/OmarElGabry/go-textnow/internal/sms",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/phonebook:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@com_github_mwitkow_go_proto_validators//:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
