load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mongodb.go"],
    importpath = "github.com/OmarElGabry/go-textnow/internal/pkg/mongodb",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
    ],
)
