load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "github.com/OmarElGabry/go-textnow/internal/pkg/mysql",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_go_sql_driver_mysql//:go_default_library"],
)
