load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["redis.go"],
    importpath = "github.com/OmarElGabry/go-textnow/internal/pkg/redis",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/config:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
    ],
)
