load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validator.go"],
    importpath = "github.com/OmarElGabry/go-textnow/internal/pkg/validator",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_grpc_ecosystem_go_grpc_middleware//validator:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
